# bird-sound-quiz

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  data_collection.py  main.py  pyproject.toml  pytest.ini  quiz.py  requirements-mysql.txt  requirements-postgres.txt  ruff.toml
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_security_answer.py  0003_user_preferred_region.py
accounts/templates/: account_deleted.html  change_password.html  login.html  my_profile.html  my_stats.html  password_change_done.html  register.html
accounts/templatetags/: account_extras.py  form_extras.py
bird_sound_quiz/: context_processors.py  manage.py  settings.py  urls.py
bird_sound_quiz/bird_sound_quiz/: asgi.py  settings.py  urls.py  wsgi.py
contribute/: models.py  services.py  urls.py  views.py
contribute/migrations/: 0001_initial.py  0002_observationtypeannotation_unique_user_observation.py
contribute/templates/: species_status_task.html  start.html  task_done.html  thank_you.html
contribute/templatetags/: contribute_extras.py
contribute/tests/: test_services.py
quiz/: admin.py  models.py  services.py  translation.py  urls.py  utils.py  views.py
quiz/importers/: __init__.py  ebird.py  lajifi.py  util.py  xenocanto.py
quiz/migrations/: 0001_initial.py  0002_rename_species_id_recording_species_and_more.py  0003_recording_downloaded.py  0004_recording_license_url_recording_xc_audio_url.py  0005_region_species_family_species_genus_species_order_and_more.py  0006_species_code.py  (+13 more)
static/: style.css
templates/: base.html  index.html  quiz_page.html  results_page.html
(+30 files in other folders)
