[project]
name = "bird-sound-quiz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-environ>=0.12.0",
    "psycopg>=3.2.9",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
]
import = [
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
