[project]
name = "bird-sound-quiz"
version = "0.2.0"
description = "Bird call identification game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
    "django-environ>=0.12.0",
    "django-simple-captcha>=0.6.2",
]

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
    "model-bakery>=1.20.5",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.3",
]
import = [
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
mysql = [
    "mysqlclient>=2.2.7",
]
postgres = [
    "psycopg>=3.2.9",
]
